# doxed

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
doxer/application/: __init__.py  commands.py  dtos.py  queries.py
doxer/domain/: __init__.py  entities.py  exceptions.py  ports.py  validators.py  value_objects.py
doxer/entrypoints/: web_server.py
doxer/infrastructure/: config.py
doxer/infrastructure/di/: __init__.py  providers.py
doxer/infrastructure/http/: exceptions_handler.py
doxer/infrastructure/media/: gif_generator.py
doxer/infrastructure/persistence/: __init__.py  constants.py  repositories.py
doxer/infrastructure/security/: token_handler.py
doxer/infrastructure/utils/: __init__.py  id_generator.py
doxer/presentation/: __init__.py  controllers.py  schemas.py
